# daedalus

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  QUICKSTART.md  README.md  SECURITY.md  agent_ultimate.py  build_app.sh  daedalus.spec  desktop_app.py  docker-compose.yml  hermes_cli.py  hermes_ultimate.db  install.sh  package.json  pyproject.toml  requirements.txt
.claude/: launch.json
.github/workflows/: ci.yml  test.yml
bench/: swebench_runner.py
core/: __init__.py  agent.py  changeset.py  deploy.py  evalgate.py  kanban.py  memory.py  observability.py  providers.py  safety.py  scaffold.py  server.py  tools.py
core/checkpoint/: __init__.py
core/cognition/: __init__.py  distill.py  dream.py  events.py  judge.py  subconscious.py
core/context/: __init__.py  budgeter.py  checkpointer.py  engine.py  immune.py  store.py
core/epistemic/: __init__.py  calibration.py  maxmode.py  router.py
core/intel/: __init__.py  codeintel.py  embeddings.py  lsp.py  semsearch.py  sentinel.py  worldmodel.py
core/platform/: __init__.py  doctor.py  mcp_client.py  modeladvisor.py  profiler.py
core/senses/: __init__.py  orchestra.py  vision.py  voice.py
desktop/: index.html  package-lock.json  package.json
desktop/src/: App.tsx  types.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
desktop/src/components/AgentView/: AgentDashboard.tsx
desktop/src/components/Chat/: ChangesetReview.tsx  ChatView.tsx
desktop/src/components/Cockpit/: Cockpit.tsx  CockpitDock.tsx  ShipBar.tsx
desktop/src/components/Composer/: Composer.tsx
desktop/src/components/Editor/: EditorPane.tsx
desktop/src/components/Files/: FileExplorer.tsx
desktop/src/components/Git/: GitPanel.tsx
desktop/src/components/Kanban/: KanbanBoard.tsx
desktop/src/components/LogViewer/: LogViewer.tsx
desktop/src/components/Lsp/: LspPanel.tsx
desktop/src/hooks/: useAgent.ts  useKanban.ts  useWebSocket.tsx
desktop/src/store/: session.ts
docs/: LAUNCH.md
docs/superpowers/specs/: 2026-07-02-hermes-deep-mind-design.md  2026-07-02-phase2-cognition-design.md  2026-07-02-phase3-intel-senses-design.md  2026-07-02-phase4-platform-design.md  2026-07-02-phase5-epistemic-design.md  2026-07-02-phase8-cli-webapp-design.md  2026-07-03-phase9-reliability-design.md  2026-07-04-phase12-editor-changesets-design.md  2026-07-04-phase13-lsp-embeddings-design.md  2026-07-09-phase14-vscode-extension-design.md
hermes_webui/: __init__.py  index.html
hermes_webui/assets/: index-BFi-bDFr.js  index-BPiMtham.js  index-BSp9reGd.js  index-C7j2jx_5.js  index-CtiniHoT.js  index-D6kT_WMy.js  index-Dva3xPX4.js  index-ont-p4Iw.js
scripts/: sync_webui.sh
tests/: test_autoroute.py  test_changeset.py  test_checkpoint_safety.py  test_cli_run.py  test_cognition.py  test_context_engine.py  test_conversation.py  test_core.py  test_deploy.py  test_desktop_app.py  test_e2e_smoke.py  test_e2e_ws.py  test_epistemic.py  test_evalgate.py  test_intel.py  test_launcher.py  test_lsp_embeddings.py  test_mentions_cancel.py  test_observability.py  test_ollama_native.py  test_platform.py  test_reliability.py  test_scaffold.py  test_senses.py
vscode-extension/: README.md  extension.js  package-lock.json  package.json
vscode-extension/scripts/: sync_webui.sh
(+4 files in other folders)
