[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "hermes-ultimate"
version = "0.2.0"
description = "Production-grade autonomous coding agent with safety modes, codebase indexing, git checkpoints, and 20+ LLM providers"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0",
    "anthropic>=0.30",
    "python-dotenv>=1.0",
    "websockets>=12.0",
    "playwright>=1.40",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pre-commit>=3.0",
]
desktop = [
    "pyautogui>=0.9",
    "pillow>=10.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
filterwarnings = ["ignore::DeprecationWarning"]
