[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-ultimate"
version = "1.5.0"
description = "Self-evolving multimodal coding assistant: persistent memory, failure immunity, sleep-time compute, causal world model, MoE expert routing, calibrated confidence, MCP client, and 22 LLM providers"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0",
    "anthropic>=0.30",
    "python-dotenv>=1.0",
    "websockets>=12.0",
    "playwright>=1.40",
    "requests>=2.31",
    "rich>=13.0",
]

[project.scripts]
hermes = "hermes_cli:main"

[tool.setuptools]
py-modules = ["agent_ultimate", "hermes_cli"]

[tool.setuptools.packages.find]
include = ["core*"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pre-commit>=3.0",
]
desktop = [
    "pyautogui>=0.9",
    "pillow>=10.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
filterwarnings = ["ignore::DeprecationWarning"]
