[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "daedalus-ai"
version = "2.0.4"
readme = "README.md"
description = "Daedalus — self-evolving multimodal coding assistant powered by the Hermes Deep Mind engine: persistent memory, failure immunity, sleep-time compute, causal world model, MoE expert routing, calibrated confidence, MCP client, and 22 LLM providers"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0",
    "anthropic>=0.30",
    "python-dotenv>=1.0",
    "websockets>=12.0",
    "requests>=2.31",
    "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/KingLabsA/daedalus"
Repository = "https://github.com/KingLabsA/daedalus"
Changelog = "https://github.com/KingLabsA/daedalus/blob/main/CHANGELOG.md"

[project.scripts]
daedalus = "hermes_cli:main"
dae = "hermes_cli:main"
hermes = "hermes_cli:main"

[tool.setuptools]
py-modules = ["agent_ultimate", "hermes_cli"]

[tool.setuptools.packages.find]
include = ["core*", "hermes_webui*"]

[tool.setuptools.package-data]
hermes_webui = ["**/*"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pre-commit>=3.0",
]
desktop = [
    "pyautogui>=0.9",
    "pillow>=10.0",
]
browser = [
    "playwright>=1.40",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
filterwarnings = ["ignore::DeprecationWarning"]
